--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1482,3 +1482,17 @@ section {
 #footer .credits a {
   transition: 0.3s;
 }
+
+/* Ramadan Style */
+.ramadan .ramadan-col img {
+  width: 60%;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .ramadan .ramadan-col img {
+    width: 100%;
+    height: 100%;
+  }
+}
+/* Ramadan Style */
